# allos-cf98

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_PROMPT.md  CONTRIBUTING.md  INSTALL_PROMPT.md  PROJETO.md  README.md  SETUP.md  TROUBLESHOOTING.md  bootstrap.py  config.example.py  discover_lid.py  docker-compose.override.yml.example  docker-compose.yml  doctor.py  media_handler.py  pyproject.toml  requirements.txt  send_message.py  setup_config.py  start.ps1  start.sh  stop.ps1  stop.sh  transcribe.py  update_webhooks.py  webhook_server.py
.github/: pull_request_template.md
docker/: Dockerfile.agent  Dockerfile.webhook  agent_loop.sh
docs/: API_CONTRACT.md  DEPLOY_24_7_LINUX.md  DOCKER.md  TRILHA_2_ROADMAP.md
docs/plans/: 2026-04-28-oss-distribution.md  2026-04-28-trilha-2-vps-deploy.md  2026-05-07-trilha-3-docker-oss.md
scripts/: bootstrap.py  docker_setup.py  start.ps1
src/whatsapp_agent/: add_session.py  doctor.py  media_handler.py  send_message.py  setup_config.py  update_webhooks.py  webhook_server.py
tests/: conftest.py  test_add_session.py  test_agent_loop.py  test_bootstrap.py  test_docker_compose.py  test_dockerfile_webhook.py  test_media_handler.py  test_send_message.py  test_setup_config.py  test_transcribe.py  test_update_webhooks.py  test_webhook_parser.py  test_zz_healthz.py
