[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-claude-agent"
version = "1.0.0"
description = "Self-hosted WhatsApp agent powered by Claude Code CLI."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Geovani Junior", email = "sitecasadainfo2011@gmail.com" }]
keywords = ["whatsapp", "claude", "agent", "megaapi", "cloudflared"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/giovani-junior-dev/Allos"
Issues = "https://github.com/giovani-junior-dev/Allos/issues"
Changelog = "https://github.com/giovani-junior-dev/Allos/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = [
  "webhook_server",
  "monitor",
  "send_message",
  "media_handler",
  "transcribe",
  "update_webhooks",
  "doctor",
  "add_session",
  "discover_lid",
  "setup_config",
  "bootstrap",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
